--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+# Backend keys & secrets
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+server/.env
+firebase-service-account.json
+server/firebase-service-account.json
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
