--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/meal-book?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://asheqsub_db_user:hkvweXIFNNN380QA@cluster0.duotsqj.mongodb.net/?appName=Cluster0
